--- a/src/main/resources/site/index.html
+++ b/src/main/resources/site/index.html
@@ -1,14 +1,15 @@
 <html ng-app="app">
 <head>
     <script type="application/javascript" src="js/lib/jquery-2.1.1.min.js"></script>
-    <script type="application/javascript" src="js/lib/angular.min.js"></script>
+    <script type="application/javascript" src="js/lib/angular.js"></script>
+    <script type="application/javascript" src="js/lib/angular-route.js"></script>
     <script type="application/javascript" src="js/app.js"></script>
+    <script type="application/javascript" src="js/controllers.js"></script>
+
+    <link rel="stylesheet" href="css/bootstrap.css"/>
+    <link rel="stylesheet" href="css/styles.css"/>
 </head>
 <body ng-controller="customerController">
-    <ul>
-        <li ng-repeat="customer in customers">
-            <p>{{customer.firstName}}, {{customer.lastName}}</p>
-        </li>
-    </ul>
+<div class="main" ng-view></div>
 </body>
 </html>
