--- a/src/main/resources/site/index.html
+++ b/src/main/resources/site/index.html
@@ -9,7 +9,7 @@
     <link rel="stylesheet" href="css/bootstrap.css"/>
     <link rel="stylesheet" href="css/styles.css"/>
 </head>
-<body ng-controller="customerController">
+<body>
 <div class="main" ng-view></div>
 </body>
 </html>
