--- a/src/main/resources/site/index.html
+++ b/src/main/resources/site/index.html
@@ -3,6 +3,7 @@
     <script type="application/javascript" src="js/lib/jquery-2.1.1.min.js"></script>
     <script type="application/javascript" src="js/lib/angular.js"></script>
     <script type="application/javascript" src="js/lib/angular-route.js"></script>
+    <script src="js/lib/angular-cookies.js"></script>
     <script type="application/javascript" src="js/app.js"></script>
     <script type="application/javascript" src="js/controllers.js"></script>
 
